app1/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
  labels:
    app: app1
